[gd_scene load_steps=2 format=3 uid="uid://b1q21u8lc4fgv"]

[ext_resource type="Script" path="res://scenes/menus/story_screen.gd" id="1_271jg"]

[node name="StoryScreen" type="Node2D"]
script = ExtResource("1_271jg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 55

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You have been challenged to a body building
competition."
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You have three weeks to train before you
are judged by the body building comittee."
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You must train your arms, core, and legs
by performing different exercises."
horizontal_alignment = 1

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Your performance in those excercises will
determine the outcome of your muscle building
endeavors."
horizontal_alignment = 1

[node name="Label5" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Good Luck."
horizontal_alignment = 1
